# p3dfft

./: Index.md  Install.md  Introduction.md  Makefile  Makefile.am  Makefile.in  Papers.md  ProjectHome.md  RELEASE_NOTES  TableOfContents.md  Troubleshooting.md  UserGuide.md  bcomm1_trans.F90  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  fcomm1.F90  fft_exec.F90  fft_init.F90  kraken  reorder.F90
C/: Makefile.in
FORTRAN/: Makefile.in  driver_sine_inplace.F90
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
brances/p3dfft-multivar/: config.status  configure
brances/p3dfft-multivar/include/: config.h  p3dfft.h
brances/p3dfft-multivar/sample/C/: driver_sine.c
brances/p3dfft-multivar/sample/FORTRAN/: Makefile.in  driver_cheby.F90  driver_rand_many.F90  driver_sine.F90
branch/p3dfft-configure/: INSTALL.txt  Makefile  config.status  configure  configure.ac
branch/p3dfft-configure/autom4te.cache/: output.2  traces.1  traces.2
branch/p3dfft-configure/include/: p3dfft.mod
branch/p3dfft-configure/sample/: Makefile  Makefile.in  makeinc.Kraken
branch/p3dfft-configure/sample/C/: Makefile  Makefile.am  Makefile.in  test_rand.x  test_sine.x  test_sine_inplace.x  test_spec.x
branch/p3dfft-configure/sample/FORTRAN/: Makefile  Makefile.am  Makefile.in  driver_sine_inplace.f  test_rand.x  test_sine.x  test_sine_inplace.x  test_spec.x
branches/: config.status
branches/include/: p3dfft.h
branches/p3dfft-cheb/: configure
branches/p3dfft-config/: Makefile  config.h  config.status  configure.ac
branches/p3dfft-config/autom4te.cache/: output.0  output.1  requests  traces.1  traces.2
branches/p3dfft-config/include/: p3dfft.mod
branches/p3dfft-config/p3dfft/: configure
branches/p3dfft-config/p3dfft/autom4te.cache/: output.2
branches/p3dfft-config/p3dfft/sample/: makeinc.Ranger.Intel
branches/p3dfft-config/p3dfft/sample/FORTRAN/: driver_sine.f
branches/p3dfft-config/sample/: Makefile
branches/p3dfft-config/sample/C/: Makefile  Makefile.am  makeinc
branches/p3dfft-config/sample/FORTRAN/: Makefile  Makefile.am  Makefile.in  driver_rand.f
branches/p3dfft-dist/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
branches/p3dfft-dist/sample/: Makefile.in
branches/p3dfft-dist/sample/FORTRAN/: Makefile.am  Makefile.in
branches/p3dfft-f90/: Makefile.am  config.h.in  configure  configure.ac
branches/p3dfft-f90/include/: p3dfft.h  p3dfft.mod
branches/p3dfft-f90/sample/C/: Makefile.am  Makefile.in  driver_rand.c  driver_sine.c  driver_spec.c
branches/p3dfft-f90/sample/FORTRAN/: Makefile.am  Makefile.in  driver_ghost.f90  driver_rand.f90  driver_sine.f90  driver_sine_inplace.f90  driver_spec.f90
branches/p3dfft-k/: config.status
branches/p3dfft-k/sample/C/: Makefile
branches/p3dfft-k/sample/FORTRAN/: Makefile  driver_sine.f90
branches/p3dfft-kind/: config.h  config.status  configure
branches/p3dfft-kind/sample/C/: Makefile  driver_sine.c  driver_sine_inplace.c
branches/p3dfft-kind/sample/FORTRAN/: Makefile  driver_sine.f90  driver_spec.f90
branches/p3dfft-multivar/: Makefile  configure
branches/p3dfft-multivar/include/: config.h
branches/p3dfft-multivar/sample/C/: Makefile  driver_rand.c  driver_spec.c
branches/p3dfft-multivar/sample/FORTRAN/: Makefile.in  driver_cheby.F90  driver_noop.F90  driver_sine_inplace_many.F90
branches/p3dfft-ov/: Fconftest.f  config.status  configure  configure.ac
branches/p3dfft-ov/autom4te.cache/: output.1  requests
branches/p3dfft-ov/include/: config.h
branches/p3dfft-ov/sample/C/: Makefile  driver_inverse.c  driver_sine.c
branches/p3dfft-ov/sample/FORTRAN/: Fdriver_noop.f90  Fdriver_rand_many.f90  Fdriver_sine.f90  Fdriver_spec.f90  driver_cheby.F90  driver_sine_inplace.F90
branches/p3dfft-premod/: Makefile  config.h  config.status
branches/p3dfft-premod/autom4te.cache/: traces.0
branches/p3dfft-premod/include/: p3dfft.h  p3dfft.mod
branches/p3dfft-premod/sample/: Makefile
branches/p3dfft-premod/sample/C/: Makefile  test_rand.x  test_sine.x  test_sine_inplace.x  test_spec.x
branches/p3dfft-premod/sample/FORTRAN/: Makefile  Makefile.in  test_rand.x  test_sine.x  test_sine_inplace.x
branches/p3dfft-tests/: Makefile  config.h  config.status
branches/p3dfft-tests/autom4te.cache/: traces.1
branches/p3dfft-tests/sample/C/: Makefile.am  Makefile.in
branches/p3dfft-tests/sample/FORTRAN/: Makefile  Makefile.am
branches/sample/: Makefile.am  Makefile.in
branches/sample/FORTRAN/: Makefile.am  driver_cheby.f90
docs/: P3DFFT_XSEDE_symposium2012.ppt  SC08_poster.ppt  XSEDE13_abstract.doc
include/: config.h  p3dfft.h  p3dfft.mod
kraken/: batch.sh
sample/: Makefile  Makefile.in  mpi
sample/C/: Makefile  Makefile.am  Makefile.in  driver_rand.c  driver_sine.c  driver_sine_inplace.c  driver_spec.c  test_rand.x  test_sine.x  test_sine_inplace.x  test_spec.x
sample/FORTRAN/: Fdriver_cheby.f90  Fdriver_inverse.f90  Fdriver_sine_many.f90  Makefile  Makefile.am  Makefile.in  driver_cheby.f90  driver_ghost.f  driver_rand.F90  driver_rand.f90  driver_sine.f90  driver_sine_inplace.F90  driver_sine_inplace.f90  driver_sine_inplace_many.F90  driver_sine_many.F90  driver_spec.f90  test_sine.x  test_sine_inplace.x  test_spec.x
tags/p3dfft.2.5.1/sample/FORTRAN/: driver_sine.F90
tags/tmp/include/: config.h
tags/tmp/sample/C/: Makefile.in
test-script/: make-test.pl  variables.pl
trunk/: config.h  config.status  configure  configure.ac
trunk/include/: p3dfft.h
trunk/sample/: README  makefile  makeinc.IBM_BGL.essl  makeinc.IBM_BGL.fftw  makeinc.IBM_PWR4.essl  makeinc.IBM_PWR4.fftw  makeinc.Kraken  makeinc.Ranger.Intel  makeinc.Ranger.PGI  stdin
trunk/sample/C/: driver_rand.c  driver_sine.c  driver_sine_inplace.c  driver_spec.c  makefile.loc
trunk/sample/FORTRAN/: driver_spec.f  makefile.loc
wiki/: Compiling.wiki  ExternalResources.wiki  Index.wiki  Install.wiki  Introduction.wiki  Papers.wiki  TableOfContents.wiki  Troubleshooting.wiki  UserGuide.wiki  install.wiki  userguide.wiki
(+4 files in other folders)
